# ia_notes

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.MD
models/: numbers.txt  numbers_10000k.txt  numbers_train_10k.txt
src/: ann.cpp  ann.hpp  compute_graph.cpp  compute_graph.hpp  dataset.cpp  dataset.hpp  img_data.cpp  img_data.hpp  knn.cpp  knn.hpp  main.cpp  neural_network.cpp  neural_network.hpp  optimizer.cpp  optimizer.hpp  utils.cpp  utils.hpp
